change LaTeX to portuguese

--- a/T1/RELATORIO.tex
+++ b/T1/RELATORIO.tex
@@ -1,6 +1,6 @@
-ss{article}
+\documentclass{article}
 
-\usepackage[english]{babel}
+\usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
@@ -409,6 +409,4 @@ $k$ & Execuções & Tempo Total & Tempo/Execução \\\hline
 \textbf{Conclusão}: o algoritmo derivado da prova indutiva tem várias limitações. Ele não permite um número arbitrário de equipes, somente potências de 2. A sua execução é demorada e exige que sejam feitas muitas chamadas recursivas, da ordem de $2^k$. Apesar disso, tem resultados corretos e possui uma explicação interessantíssima. Uma característica dele é que é determinístico: não incorpora nenhum fator de aleatoriedade quanto à geração das rodadas e partidas.
 
 
-
 \end{document}
-
