--- a/T1/RELATORIO.tex
+++ b/T1/RELATORIO.tex
@@ -69,6 +69,8 @@ def quo(x, y, k):
 \end{verbatim}
 }
 
+\pagebreak
+
 \textbf{Testes}: A tabela abaixo ilustra os resultados dos testes:
 
 \begin{table}[H]
@@ -340,8 +342,10 @@ def tournament(k, start = 1):
 \end{verbatim}
 }
 
+\pagebreak
 
 \textbf{Exemplo}: com k=3, esse foi o resultado gerado pela implementação em Python (em anexo, o código usado para printar):
+
 
 {\color{blue}
 \begin{verbatim}
@@ -382,6 +386,8 @@ Round #07
   Game #04: 4 vs 7
 \end{verbatim}
 }
+
+\pagebreak
 
 \textbf{Testes}: A tabela abaixo ilustra os resultados dos testes. O maior valor de $k$ para o qual o algoritmo gerou as rodadas foi 13.
 
